# scripts

./: .cnb.yml  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  sync.yml
config/: config.example.json  conifg.example.json
src/: main.rs
src/config/: app_config.rs  log.rs  mod.rs
src/service/: akile_checkin_svc.rs  aurora_checkin_svc.rs  mod.rs
src/util/: file_util.rs  http_util.rs  mod.rs  tg_util.rs
