[package]
name = "scripts"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-inline-default = "0.2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }

reqwest = { version = "0.12.5", features = ["json"] }

anyhow = "1.0"

time = "0.3.21"
chrono = { version = "0.4.38", features = ["serde"] }
